# pymc-survival

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-image.yml  python-package.yml
analysis/: .gitignore  results.qmd  results_overfit.qmd  results_retraining.qmd
docker/: .gitignore  job-cox-aids.lsf  job-cox-gbcs.lsf  job-cox-pbc.lsf  job-cox-veteran.lsf  job-cox-whas.lsf  job-deepsurv-aids.lsf  job-deepsurv-gbcs.lsf  job-deepsurv-pbc.lsf  job-deepsurv-re-aids.lsf  job-deepsurv-re-gbcs.lsf  job-deepsurv-re-whas.lsf  job-deepsurv-veteran.lsf  job-deepsurv-whas.lsf  job-exp-aids.lsf  job-exp-gbcs.lsf  job-exp-pbc.lsf  job-exp-re-aids.lsf  job-exp-re-gbcs.lsf  job-exp-re-pbc.lsf  job-exp-veteran.lsf  job-exp-whas.lsf  job-kwb-aids.lsf  job-kwb-gbcs.lsf  job-kwb-pbc.lsf  job-kwb-veteran.lsf  job-kwb-whas.lsf  job-nnwb-gbcs.lsf  job-nnwb-pbc.lsf  job-nnwb-veteran.lsf  job-nnwb-whas.lsf  job-rsf-aids.lsf  job-rsf-gbcs.lsf  job-rsf-pbc.lsf  job-rsf-veteran.lsf  job-rsf-whas.lsf  job-wb-aids.lsf  job-wb-gbcs.lsf  job-wb-pbc.lsf  job-wb-re-aids.lsf  (+8 more)
docker/comparison/: job-cox-aids.lsf  job-cox-gbcs.lsf  job-deepsurv-aids.lsf  job-deepsurv-gbcs.lsf  job-exp-whas.lsf  job-gp-pbc.lsf  job-rsf-aids.lsf  job-wb-aids.lsf  job-wb-veteran.lsf
docker/updating/: job-deepsurv-re-pbc.lsf  job-exp-re-aids.lsf
examples/experiments/: .gitignore  collect_retrain_summary.py  coxph.py  deepsurv.py  pmsurv_common.py  pmsurv_exponential.py  pmsurv_weibull.py  pmsurv_weibull_nn.py  prepare_data.ipynb  recalc_overfit.py  rsf.py  run_docker.bat  run_experiment.py  run_retrain_experiment.py  (+1 more)
pmsurv/: preprocessing.py  utils.py
tests/: data.py  predict_test.py  random_test.py  syntheticdata.py  test_exponential_model.py  test_gaussian_process_model.py  test_gp.py  test_predict.py  test_samplers.py  test_veteran.py  test_weibull_linear.py  test_weibull_nn.py
(+151 files in other folders)
